@@ -203,11 +203,11 @@ The key <code>vertical_factor</code> is applied to translational filter strength
 <li>Start the OpenXR application of your choice</li>
 <li>Bring your motion rig in neutral position</li>
 <li>Sit in your rig</li>
-<li>put your headset on and face forward (~ direction surge). Potential rotation of the hmd on roll and pitch angle is ignored for the calculation</li>
+<li>put your headset on and face forward (~ direction surge). Potential rotation of the hmd on roll and pitch axis is ignored for the calculation</li>
 <li>issue the calibration command by activating the <code>center</code> shortcut. You can also do this implicitly by activating motion compensation if you haven't (re)calibrated since last loading of the configuration.</li>
 </ol>
 <ul>
-<li>You can use the tracker marker of the graphical overlay and keyboard shortcuts to adjust the cor position in-game. Make sure to calibrate the tracker first, because the marker tracker just rests at vr play-space origin beforehand. For in-game changes to survive application restart, you have to manually save the configuration.</li>
+<li>You can use the tracker marker of the graphical overlay and keyboard shortcuts (or the left motion controller, see further below) to adjust the cor position in-game. Make sure to calibrate the tracker first, because the marker tracker just rests at vr play-space origin beforehand. For in-game changes to survive application restart, you have to manually save the configuration.</li>
 <li>If you're unable to locate the cor of your rig, try out the method described in the <a href="#virtual-tracker">according troubleshooting section</a></li>
 <li>You may have to invert some of the rotations/translations on output side to get them compensated properly. <strong>For new users it's strongly recommended to use some artificial telemetry (joystick input, sine wave generator, etc.) and testing one degree of freedom at at time</strong></li>
 <li>If you're using YawVR Game Engine you can also use the parameters <code>Head Distance</code> and <code>Height</code> in its Motion Compensation tab to specify the offset of the cor. Head distance is basically equal to <code>offset_forward</code> in the configration file. But note that the height parameter is measured upwards from the bottom of your play-space, so you'll need to have that setup correctly in order to use that feature.</li>
@@ -215,7 +215,20 @@ The key <code>vertical_factor</code> is applied to translational filter strength
 <h3 id="saving-and-reloading-the-cor-location">Saving and reloading the cor location</h3>
 <p>Once you're satisfied with the current setting, the current position and orientation of the cor can be saved to the (global = <code>ctrl + shift + s</code> or app-specific = <code>ctrl + shift + a</code>) config file. You can subsequently set the config key <code>use_cor_pos</code> to <code>1</code>. This causes the cor position to be loaded from the config file when calibrating instead of being determined using the hmd position and the offset values.<br />
 Applications using OpenComposite usually operate in a different VR play-space than titles supporting native OpenXR. That's why cor position needs to be saved once for all native games and once for all games using OpenComposite.<br />
-<strong>Note that this functionality may not work with all HMD vendors. Initially setting up the play-space in the VR runtime of your hmd might help to get this working correctly. Rumor has it that some HMDs need to be started/initialized at the exact same location for the play-space coordinates to be consistent in between uses.</strong></p>
+<strong>Note that this functionality may not work with all HMD vendors. Setting up the play-space in the VR runtime of your hmd (before first use) might help to get this working correctly. Rumor has it that some HMDs need to be started/initialized at the exact same location for the play-space coordinates to be consistent in between uses.</strong></p>
+<h3 id="adjusting-cor-location-using-a-motion-controller">Adjusting cor location using a motion controller</h3>
+<p>You can use (only) the left motion controller to move the cor position in virtual space. Make sure to activate the graphical overlay (<code>ctrl + d</code> by default) to see the cor marker in game.</p>
+<ul>
+<li>Press and hold the trigger button to 'grab' and move the cor marker, this way you can make it reach positions that are obstructed in the real world.</li>
+<li>While pressing the trigger:
+<ul>
+<li>moving the controller left/right, up/down, or forward/backward is pushing the cor marker in the same direction</li>
+<li>rotating the controller on the yaw axis is adjusting the cor marker accordingly. Rotation of the motion controller on pitch or roll axis are ignored.</li>
+</ul>
+</li>
+<li>Press the menu button (or button 'a' on a valve index controller) to have the cor location snap to the current controller position</li>
+</ul>
+<p>In contrast to using the keyboard shortcuts, modification with the motion controller will not affect the offset values. To reuse the adjusted position, you need to save and use <code>use_cor_pos = 1</code> as described above.</p>
 <h2 id="running-your-application">Running your application</h2>
 <ol>
 <li>make sure your using OpenXR as runtime in the application you wish to use motion compensation in</li>
